<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>>>>>>> examples
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:orientation="vertical"
=======
>>>>>>> examples
    android:padding="16dp"
    tools:context="com.example.android.background.MainActivity">

    <TextView
<<<<<<< HEAD
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions" />

    <FrameLayout
        android:id="@+id/fl_water_increment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/ib_water_increment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/water_increment_content_desc"
            android:onClick="incrementWater"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_local_drink_grey_120px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Centering TextView within image -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="64"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_water_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_water_count"
                android:textColor="#424242"
                android:textSize="35sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:visibility="invisible" />
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/fl_charge_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_power_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/charging_plug_content_desc"
            android:src="@drawable/ic_power_grey_80px" />

        <TextView
            android:id="@+id/tv_charging_reminder_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/iv_power_increment"
            android:layout_toRightOf="@id/iv_power_increment"
            android:text="@string/default_charge_notification_count" />

    </RelativeLayout>
</LinearLayout>
=======
        android:id="@+id/tv_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/tv_wifi_reminder_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_wifi_reminder_text"
        app:layout_constraintLeft_toLeftOf="@+id/tv_charging_reminder_count"
        app:layout_constraintRight_toRightOf="@+id/tv_charging_reminder_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_charging_reminder_count"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/tv_charging_reminder_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_charging_reminder_text"
        app:layout_constraintLeft_toLeftOf="@+id/tv_explanation"
        app:layout_constraintRight_toRightOf="@+id/tv_explanation"
        app:layout_constraintTop_toBottomOf="@+id/tv_explanation"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <ImageButton
        android:id="@+id/iv_water_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:onClick="incrementWater"
        android:src="@drawable/ic_local_drink_black_80px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <TextView
        android:id="@+id/tv_water_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_water_count"
        app:layout_constraintBottom_toBottomOf="@+id/iv_water_increment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_water_increment"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

</android.support.constraint.ConstraintLayout>
>>>>>>> examples
